# tbr-deal-finder

./: CHANGELOG.md  Makefile  README.md  TBRDealFinder.spec  pyproject.toml
.github/workflows/: build-release-dmg.yml  build-release-exe.yml
docs/: desktop-app.md
scripts/packaging/: build_cross_platform.py  create_dmg.sh
tbr_deal_finder/: __init__.py  audio_isbn.py  book.py  cli.py  config.py  desktop_updater.py  library_exports.py  main.py  migrations.py  retailer_deal.py  seller_deal.py  tracked_books.py  utils.py  version_check.py
tbr_deal_finder/gui/: main.py  widgets.py
tbr_deal_finder/gui/pages/: all_books.py  all_deals.py  base_book_page.py  base_deals_page.py  book_details.py  latest_deals.py  owned_books.py  settings.py  wishlist.py
tbr_deal_finder/queries/: get_active_deals.sql  get_deals_found_at.sql
tbr_deal_finder/retailer/: __init__.py  amazon.py  audible.py  chirp.py  kindle.py  kobo.py  librofm.py  models.py
tbr_deal_finder/seller/: audible.py  chirp.py  librofm.py  models.py
