[project]
name = "tbr-deal-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "audible>=0.10.0",
    "click>=8.2.1",
    "duckdb>=1.3.2",
    "pandas>=2.3.1",
    "questionary>=2.1.0",
    "tqdm>=4.67.1",
]
